# xivapi-py

./: MANIFEST.in  pyproject.toml
.github/workflows/: coverage_and_lint.yml  publish.yml
pyxivapi/: __init__.py  client.py  decorators.py  exceptions.py  models.py
